--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     --primary-gray: #f5f5f5;
     --secondary-gray: #dedede;
     --tertiary-gray: #4f4f4f;
+    --decorative-gray: #dddddd;
 }
 
 * {
@@ -41,6 +42,28 @@ input[type="checkbox"]:checked::before {
     font-size: 20px;
     line-height: 18px;
 }
+
+.button-action {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    border: none;
+    border-radius: 8px;
+    padding: 14px 24px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button-action:hover {
+    background-color: var(--decorative-color);
+}
+
+.button-action:active {
+    transform: scale(0.85);
+}
+
 
 
 /* Banner Promocional */
@@ -88,12 +111,21 @@ input[type="checkbox"]:checked::before {
     font-family: var(--secondary-font), sans-serif;
     font-weight: 500;
     text-align: left;
-    padding: 12px 16px 10px 24px;
-    margin: 0 275px 0 72px;
+    padding: 12px 12px 10px 24px;
+    margin: 0 12px 0 72px;
     background: url("/assets/icons/lupa.svg") no-repeat right 18px center;
     background-size: 18px 18px;
-    border: 1px solid #dddddd;
+    border: 1px solid var(--decorative-gray);
     border-radius: 10px;
+}
+
+.header-itens_search input.has-content {
+    background: none;
+}
+
+#search-result {
+    align-content: start;
+    width: 200px;
 }
 
 .header-itens_session, .header-itens_user {
@@ -183,9 +215,11 @@ input[type="checkbox"]:checked::before {
 
 .container-carrossel {
     display: flex;
+    position: relative;
     flex-direction: column;
     width: 1260px;
     margin: 96px 0;
+    overflow: visible;
 }
 
 .carrossel-header {
@@ -198,6 +232,10 @@ input[type="checkbox"]:checked::before {
     padding: 2px 0;
 }
 
+.carrossel-header span {
+    cursor: pointer;
+}
+
 .carrossel-header h3 {
     font-size: 20px;
 }
@@ -206,23 +244,194 @@ input[type="checkbox"]:checked::before {
     font-size: 14px;
 }
 
-.carrossel-produtos {
+.carrossel-wrapper {
+    display: flex;
+    transition: transform 0.5s ease;
+    gap: 17px;
+}
+
+.carrossel-indicators {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    margin-top: 16px;
+}
+
+.indicator {
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background-color: var(--secondary-gray);
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.indicator.active {
+    background-color: var(--tertiary-gray);
+}
+
+.carrossel-products {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
+    position: relative;
     gap: 16px;
 }
 
-.carrossel-produto {
+.carrossel-product {
     display: flex;
     justify-content: space-between;
+    position: relative;
+    flex-direction: column;
     align-items: center;
     gap: 16px;
-    border: 2px solid var(--tertiary-color);
+    border: 1px solid var(--decorative-gray);
     border-radius: 10px;
     height: 409px;
     width: 238px;
+    padding: 8px;
+    font-family: var(--secondary-font), sans-serif;
 }
+
+.carrossel-product .button-action {
+    width: 100%;
+    font-size: 14px;
+    padding: 10px 0;
+}
+
+.product-tag {
+    position: absolute;
+    background-color: #00264e;
+    color: var(--primary-color);
+    font-family: var(--secondary-font), sans-serif;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 22px;
+    text-align: center;
+    align-content: center;
+    border-radius: 4px;
+    border: 1px solid #707070;
+    width: 41px;
+    height: 22px;
+    top: 8px;
+    left: 8px;
+}
+
+.product-info {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.container-product_price {
+    display: flex;
+    gap: 9px;
+    align-items: center;
+    padding: 2px 0;
+    color: #303030;
+}
+
+.product-price_total {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    text-decoration: line-through;
+}
+
+.product-price_discount {
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 20px;
+    color: var(--tertiary-color);
+}
+
+.product-tag_discount {
+    background-color: #5ec0be;
+    color: var(--primary-color);
+    border-radius: 4px;
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 12px;
+    padding: 4px 8px;
+}
+
+.product-price_installment {
+    font-size: 12px;
+}
+
+.product-price_installment span {
+    font-weight: bold;
+}
+
+.product-image {
+    width: 222px;
+    height: 222px;
+}
+
+.product-title {
+    color: #303030;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: .4px;
+    line-height: 16px;
+
+}
+
+.carrossel-button_prev, .carrossel-button_next {
+    background-color: var(--primary-color);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 54%;
+    transform: translateY(-50%);
+    color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 10;
+    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
+
+.carrossel-button_prev:hover, .carrossel-button_next:hover {
+    background-color: var(--decorative-color);
+    border: 2px solid var(--decorative-color);
+}
+
+.carrossel-button_prev img, .carrossel-button_next img {
+    width: 12px;
+    height: 11px;
+}
+
+.carrossel-button_prev {
+    left: -15px;
+}
+
+.carrossel-button_next {
+    right: -15px;
+}
+.carrossel-button_prev:hover svg path, .carrossel-button_next:hover svg path {
+    fill: var(--primary-color);
+}
+
+
+.carrossel-button_prev:disabled, .carrossel-button_next:disabled {
+    background-color: var(--secondary-gray);
+    color: var(--primary-color);
+    border: none;
+    cursor: not-allowed;
+}
+
+.carrossel-button_prev:disabled svg path, .carrossel-button_next:disabled svg path {
+    fill: var(--primary-color);
+}
+
 
 /* Main Article */
 
@@ -400,26 +609,6 @@ input[type="checkbox"]:checked::before {
     gap: 8px;
 }
 
-.register-box button {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    border: none;
-    border-radius: 8px;
-    padding: 14px 24px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.register-box button:hover {
-    background-color: var(--decorative-color);
-}
-
-.register-box button:active {
-    transform: scale(0.85);
-}
 
 /* Footer */
 .container-footer {
@@ -433,7 +622,7 @@ input[type="checkbox"]:checked::before {
 
 .container-footer_links {
     width: 100%;
-    background-color: #f5f5f5;
+    background-color: var(--primary-gray);
     display: flex;
     flex-direction: column;
     align-items: center;
